fixing alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ header h2 {
     color:#9a9b9b;
     margin: 0 auto;
     padding: 50px 10px 250px 10px;
-    background-image: url("../img/hero.png");
+    background-image: url("../img/road.jpg");
     background-repeat:no-repeat;
     background-size: cover cover; 
     background-position:center;
@@ -454,7 +454,7 @@ header h2 {
         
 /* BASE STYLES =========================== */
     #about, #work, #contact{
-        height: 600px;
+        height: 400px;
         border: none;
     }
     
@@ -482,7 +482,7 @@ header h2 {
     }
     #work {
         margin: 0 auto;
-        padding: 115px 0 0 0;
+        padding: 100px 0 0 0;
         font-size: 1.1em;
     }
     #work img{
@@ -496,10 +496,11 @@ header h2 {
 
 /* Footer =========================== */
     #contact {
-        padding: 20px 0 0 0 ;
-       
+        padding: 60px 0 0 0 ;
     }
-    
+    #contact-info {
+        margin-top: 40px;
+    }
     
 
     
